Fix: — remove extra spaces — make App component clearer — update styles

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,99 +7,102 @@
 } 
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: 'YS Text', -apple-system, 'Helvetica Neue', sans-serif;
-  font-size: 18px;
-  line-height: 24px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: 'YS Text', -apple-system, 'Helvetica Neue', sans-serif;
+	font-size: 18px;
+	line-height: 24px;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .main-wrap {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
-  min-width: fit-content;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	min-width: fit-content;
 }
 
 .explanation-wrap {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 32px;
-  width: 764px;
-  min-width: 764px;
-  height: 573px;
-  background: #fff;
-  border-radius: 16px;
-  border: 1px solid rgba(209, 210, 214, 0.5);
-  box-sizing: border-box;
-  overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 32px;
+	width: 764px;
+	min-width: 764px;
+	height: 573px;
+	background: #fff;
+	border-radius: 16px;
+	border: 1px solid rgba(209, 210, 214, 0.5);
+	box-sizing: border-box;
+	overflow: hidden;
 }
 .pagination-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 20px;
 }
 .illustration-wrap {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 .visualization-block {
-  position: relative;
+	position: relative;
 }
 
+
 .dot {
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  background-color: green;
-  border-radius: 50%;
-}
-.dot.top {
-  z-index: 10;
-  box-shadow: 0 0 0 1.5px #1a1b22;
+	position: absolute;
+	width: 8px;
+	height: 8px;
+	background-color: green;
+	border-radius: 50%;
+	&.top {
+		z-index: 10;
+		box-shadow: 0 0 0 1.5px #1a1b22;
+	}
 }
 
 .dot-tooltip {
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  background-color: #1a1b22;
-  color: #fff;
-  padding: 2px 8px;
-  border-radius: 0 8px 8px 8px;
-  font-size: 0.8em;
-  white-space: nowrap;
-  opacity: 0;
-  display: none;
-  z-index: 10;
-}
-.dot-tooltip.shown {
-  opacity: 1;
-  display: block;
+	position: absolute;
+	top: 8px;
+	left: 8px;
+	background-color: #1a1b22;
+	color: #fff;
+	padding: 2px 8px;
+	border-radius: 0 8px 8px 8px;
+	font-size: 0.8em;
+	white-space: nowrap;
+	opacity: 0;
+	display: none;
+	z-index: 10;
+	
+	&.shown {
+		opacity: 1;
+		display: block;
+	}
 }
 
 .axis {
-  position: absolute;
-  top: 305px;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-}
-.axis-caption {
-  align-self: flex-end;
-  font-size: 0.8em;
-  margin-right: 0.8em;
+	position: absolute;
+	top: 305px;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+
+	&-caption {
+		align-self: flex-end;
+		font-size: 0.8em;
+		margin-right: 0.8em;
+	}
 }
 
 .button-primary {
@@ -117,10 +120,11 @@ body {
 	cursor: default;
 	transition: cursor .15s ease-out,background-color .15s ease-out;
 	width: 180px;
-}
-.button-primary:hover {
-	cursor: pointer;
-	background-color: #005cff;
+
+	&:hover {
+		cursor: pointer;
+		background-color: #005cff;
+	}
 }
 .button-reset {
 	padding: 12px;
@@ -135,9 +139,10 @@ body {
 	outline: none;
 	cursor: default;
 	transition: cursor .15s ease-out,background-color .15s ease-out;
-}
-.button-reset:hover {
-	cursor: pointer;
-	background-color: #005cff;
+
+	&:hover {
+		cursor: pointer;
+		background-color: #005cff;
+	}
 }
 
